--- a/client/src/components/Profile/_Profile.scss
+++ b/client/src/components/Profile/_Profile.scss
@@ -64,7 +64,7 @@
   }
 
   .photo-left img {
-    position: absolute;
+    //position: absolute;
   }
 
   .photo-left .overlaybutton {
@@ -73,7 +73,7 @@
     height: 200px !important;
     padding: unset;
     margin: auto;
-    margin-top: -120px !important;
+    margin-top: -215px !important;
     border-radius: 100px !important;
     border: 4px solid #fff !important;
     position: relative !important;
@@ -104,10 +104,11 @@
   }
 
   .name {
-    margin-top: 20px;
+    margin-top: 10px;
     font-weight: 600;
-    font-size: 20pt;
+    font-size: 25pt;
     color: #777;
+    margin-bottom: 10px;
   }
 
   .info {
@@ -128,6 +129,7 @@
     align-items: flex-start;
     // justify-content: center;
     flex-direction: column;
+    font-size: 15pt;
   }
   .desc {
     text-align: center;
@@ -136,7 +138,7 @@
     color: #999;
     font-size: 15pt;
     font-family: "Open Sans";
-    padding: 10px 100px 10px 100px;
+    padding: 10px 100px 30px 100px;
     border-bottom: 1px solid #ededed;
   }
 
@@ -269,7 +271,11 @@
   }
 
   .gallery {
-    margin-top: 35px;
+    max-width: 1250px;
+    border-radius: 5px;
+    margin: 2% auto;
+    margin-bottom: 5px;
+    text-align: center;
   }
 
   .gallery div {
@@ -279,7 +285,7 @@
   .gallery img {
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1), 0 3px 6px rgba(0, 0, 0, 0.1);
     width: auto;
-    height: auto;
+    height: 250px;
     cursor: pointer;
     max-width: 100%;
   }
@@ -288,10 +294,10 @@
     width: 550px;
     height: auto;
     border-radius: 5px;
-    margin: 10% auto;
+    margin: 2% auto;
     box-shadow: 0 9px 50px hsla(0, 0%, 75%, 0.31);
     padding: 2%;
-    background-image: linear-gradient(-225deg, #d3f0c7 50%, #9dd57c 50%);
+    background-color: #d3f0c7;
   }
   /* form Container */
   form .con {
@@ -323,7 +329,7 @@
   /* inputs form  */
   input[class="form-input"] {
     margin-top: 2%;
-    padding: 15px 15px 15px 15px;
+    padding: 15px 150px 15px 150px;
     font-size: 16px;
     font-family: Montserrat, sans-serif;
     color: #5e6472;
