--- a/client/src/index.css
+++ b/client/src/index.css
@@ -756,17 +756,13 @@ nav #nav-right-container #nav-inner-r #link a::selection {
   border: 4px solid #fff;
 }
 
-.page .photo-left img {
-  position: absolute;
-}
-
 .page .photo-left .overlaybutton {
   display: block !important;
   width: 200px !important;
   height: 200px !important;
   padding: unset;
   margin: auto;
-  margin-top: -120px !important;
+  margin-top: -215px !important;
   border-radius: 100px !important;
   border: 4px solid #fff !important;
   position: relative !important;
@@ -797,10 +793,11 @@ nav #nav-right-container #nav-inner-r #link a::selection {
 }
 
 .page .name {
-  margin-top: 20px;
+  margin-top: 10px;
   font-weight: 600;
-  font-size: 20pt;
+  font-size: 25pt;
   color: #777;
+  margin-bottom: 10px;
 }
 
 .page .info {
@@ -825,6 +822,7 @@ nav #nav-right-container #nav-inner-r #link a::selection {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  font-size: 15pt;
 }
 
 .page .desc {
@@ -834,7 +832,7 @@ nav #nav-right-container #nav-inner-r #link a::selection {
   color: #999;
   font-size: 15pt;
   font-family: "Open Sans";
-  padding: 10px 100px 10px 100px;
+  padding: 10px 100px 30px 100px;
   border-bottom: 1px solid #ededed;
 }
 
@@ -990,7 +988,11 @@ nav #nav-right-container #nav-inner-r #link a::selection {
 }
 
 .page .gallery {
-  margin-top: 35px;
+  max-width: 1250px;
+  border-radius: 5px;
+  margin: 2% auto;
+  margin-bottom: 5px;
+  text-align: center;
 }
 
 .page .gallery div {
@@ -1001,7 +1003,7 @@ nav #nav-right-container #nav-inner-r #link a::selection {
   -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1), 0 3px 6px rgba(0, 0, 0, 0.1);
           box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1), 0 3px 6px rgba(0, 0, 0, 0.1);
   width: auto;
-  height: auto;
+  height: 250px;
   cursor: pointer;
   max-width: 100%;
 }
@@ -1010,11 +1012,11 @@ nav #nav-right-container #nav-inner-r #link a::selection {
   width: 550px;
   height: auto;
   border-radius: 5px;
-  margin: 10% auto;
+  margin: 2% auto;
   -webkit-box-shadow: 0 9px 50px rgba(191, 191, 191, 0.31);
           box-shadow: 0 9px 50px rgba(191, 191, 191, 0.31);
   padding: 2%;
-  background-image: linear-gradient(-225deg, #d3f0c7 50%, #9dd57c 50%);
+  background-color: #d3f0c7;
 }
 
 .page form .con {
@@ -1051,7 +1053,7 @@ nav #nav-right-container #nav-inner-r #link a::selection {
 
 .page input[class="form-input"] {
   margin-top: 2%;
-  padding: 15px 15px 15px 15px;
+  padding: 15px 150px 15px 150px;
   font-size: 16px;
   font-family: Montserrat, sans-serif;
   color: #5e6472;
